# miniscience_4term

./: CMakeLists.txt  Lab1.cpp
labs/fenics_lab/: CMakeLists.txt  HyperElasticity.h  Poisson.h  lab_fenics.cpp
labs/fenics_lab/examples/: Poisson.cpp
labs/gmsh_lab/: CMakeLists.txt  lab_gmsh.cpp
labs/vtk_lab/: CMakeLists.txt  lab_vtk.cpp
